resources/tests/invalid_syntax/unary_deref_ptr.ct
//`Dereference operator '*' can only be applied on non-void pointer types!
//1
fn main()->i64 {
  var hello = 10;
  *hello;
}